unpackaged/main/default/objects/Product_Detail__c/Product_Detail__c.object-meta.xml
<CustomObject>
    <label>Product Detail</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>product Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>