unpackaged/main/default/objects/Product_Detail__c/fields/Amount_in_Rupees__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_Rupees__c</fullName>
    <formula>Rate_Per_KG__c  *  Weight_in_KG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>