unpackaged/main/default/objects/Product_Detail__c/fields/farmer__c.field-meta.xml
<CustomField>
    <fullName>farmer__c</fullName>
    <label>farmer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>