unpackaged/main/default/objects/Product_Detail__c/fields/Rate_Per_KG__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_KG__c</fullName>
    <label>Rate Per KG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>