unpackaged/main/default/objects/Product_Detail__c/fields/status_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>status_of_Payment__c</fullName>
    <label>status of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>