unpackaged/main/default/objects/Product_Detail__c/fields/Weight_in_KG__c.field-meta.xml
<CustomField>
    <fullName>Weight_in_KG__c</fullName>
    <label>Weight in KG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>